Fixed styling issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,16 @@ li {
 body {
 	color: #212121;
 	font-size: 14px;
-	overflow: hidden;
 	user-select: none;
 	background: #CFD8DC;
 	font-family: Roboto, sans-serif;
+}
+
+.screen-container {
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
+	position: relative;
 }
 
 .device {
